# tauri-tensorflow-template

./: .gitignore  README.md  openapi-ts.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
.github/workflows/: main.yml
server/: build-server-windows.ps1  environment.yml  main.py
src-python/: build-server-windows.ps1  environment.yml  main.py  server.spec
src-python/modules/health/: models.py  routers.py
src-python/modules/system/: models.py  routers.py
src-python/modules/tensorflow/: models.py  routers.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: lib.rs  main.rs  server.rs
src/lib/: health.store.svelte.ts
src/lib/client/: sdk.gen.ts  types.gen.ts
src/lib/components/: CPUCard.svelte  GPUCard.svelte  MemoryCard.svelte  SystemCard.svelte  Update.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
